# shader-compiler

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Makefile  TESTING.md  anim_fs_rv.ll  anim_fs_x86.ll  anim_host.rv  anim_host_x86  anim_riscv.ll  anim_vs_rv.ll  anim_vs_x86.ll  anim_x86.ll  ast.cpp  ast.h  ast_dummy.cpp  clean.sh  codegen_state.cpp  codegen_state.h  compile_commands.json  error_utils.h  irgen  irgen_riscv  irgen_spirv  lexer.cpp  lexer.h  main.cpp  main_codegen.cpp  module.bc  module.ll  module.spv  parser.cpp  parser.h  readme.md  render.sh  shader_codegen  shader_parser  spirv_vulkan_host  tests.md
ast/: ast.cpp  ast.h  ast_context.h
codegen_state/: codegen_state.cpp  codegen_state.h
helpers/: assignment_helpers.cpp  assignment_helpers.h  call_helpers.cpp  call_helpers.h  utils.h
input/: mandelbrot.src  plasma.src  raymarcher.src  shader.src
lexer/: lexer.cpp  lexer.h
main/: emit_glsl_from_ir.h  emit_trampolines.h  main_lib.cpp  main_lib_riscv.cpp  main_lib_spirv.cpp  main_lib_spirv_llvm.cpp
main_codegen/: main_codegen.cpp
parser/: parser.cpp  parser.h
pipeline/: anim_host.cpp  pipeline_abi.h  pipeline_host.cpp  pipeline_runtime.cpp  pipeline_runtime.h  spirv_vulkan_host.cpp  tex_inline.h
result/: advanced_out.ppm  anim.frag.spv  anim.vert.spv  anim_001.ppm  anim_005.ppm  anim_007.ppm  anim_011.ppm  anim_012.ppm  anim_013.ppm  anim_014.ppm  anim_spirv_000.ppm  anim_spirv_001.ppm  anim_spirv_002.ppm  anim_spirv_003.ppm  anim_spirv_004.ppm  anim_spirv_005.ppm  anim_spirv_006.ppm  anim_spirv_007.ppm  anim_spirv_008.ppm  anim_spirv_009.ppm  anim_spirv_010.ppm  anim_spirv_011.ppm  anim_spirv_012.ppm  anim_spirv_013.ppm  anim_spirv_014.ppm  anim_spirv_015.ppm  anim_spirv_016.ppm  anim_spirv_017.ppm  anim_spirv_018.ppm  anim_spirv_019.ppm  anim_spirv_020.ppm  anim_spirv_021.ppm  anim_spirv_022.ppm  anim_spirv_023.ppm  anim_spirv_024.ppm  anim_spirv_025.ppm  anim_spirv_026.ppm  anim_spirv_027.ppm  anim_spirv_028.ppm  anim_spirv_029.ppm  (+89 more)
sema/: sema.h
src/codegen/codegen_state/: codegen_state.cpp  codegen_state.h
src/codegen/emit/: emit_fs_packet.h  emit_spirv_from_ir.h  emit_trampolines.h  main_lib_riscv.cpp  main_lib_spirv.cpp
src/codegen/helpers/: assignment_helpers.cpp  call_helpers.cpp  utils.h
src/common/: error_utils.h  error_utils_fmt.h  source_manager.h
src/driver/: main_codegen.cpp
src/frontend/ast/: ast.cpp  ast.h  ast_context.cpp  ast_context.h  builtin_types.def  type.h
src/frontend/lexer/: lexer.cpp  lexer.h  tokens.def
src/frontend/parser/: parser.cpp  parser.h
src/frontend/sema/: sema.cpp  sema.h
src/passes/: sincos_opt.cpp
src/runtime/: pipeline_abi.h  pipeline_runtime.cpp  pipeline_runtime.h  tex_inline.cpp  tex_inline.h
test/: lexer_test.cpp  run_pipeline_tests.sh  run_spirv_anim.sh  run_tests.sh  sema_test.cpp
test/assets/boss/: Rumba Dancing.mtl
test/fuzz/: parser_fuzz.cpp
test/riscv/: anim_host.cpp  test_host.cpp  test_host_advanced.cpp
test/rv_host/: rv_host_compute.cpp  rv_host_compute_blur.cpp  rv_host_fragment.cpp  rv_host_mesh.cpp
test/script/: bench_common.sh  bench_packet.sh  compare_backends.sh  run_benchmark_compute.sh  run_benchmark_compute_blur.sh  run_benchmark_diverge.sh  run_benchmark_fragment.sh  run_benchmark_mesh.sh  run_benchmark_vertex.sh  run_cpu_scaling.sh  run_ir_checks.sh  run_packet_test.sh  run_tests.sh  spv_count.py
test/shaders/: test_array_init.src  test_builtins2.src  test_matrix_assign.src  test_struct.src  test_swizzle.src  test_texture.src  test_uniforms.src  test_vertex.src
test/shaders/animations/: blur_cs.src  cellular_fs.src  city_fs.src  diverge_fs.src  earth_fs.src  fire_fs.src  galaxy_fs.src  julia_fs.src  life_cs.src  mandelbrot_fs.src  mesh_fs.src  mesh_vs.src  ocean_fs.src  quad_vs.src  reaction_fs.src  ripple_fs.src  scene3d_fs.src  terrain_fs.src  terrain_vs.src  terrain_vs_vk.src  texture_test_fs.src  texture_test_gpu_fs.src  tunnel_fs.src  voronoi_fs.src  waves_fs.src
test/shaders/codegen_checks/: bool_widen.src  call_arg_coerce.src  inout_param.src  int_vector_ctor.src  matrix_mul.src  postfix_oldvalue.src  prefix_newvalue.src  shift_signedness.src  short_circuit.src  stage_builtin_coerce.src  stage_io_location.src  struct_array_field.src  ternary_dominance.src  trampoline_double_array.src  trampoline_fs_double_out.src  uniform_binding.src  vector_coerce.src  while_latch.src
test/shaders/compiler_tests/: test_basic.src  test_bitwise.src  test_compute.src  test_fragment.src  test_operators.src  test_postfix.src  test_ternary.src  test_terrain.src
test/shaders/pipeline/: anim_fs.src  anim_vs.src  scene_fs.src  scene_vs.src  triangle_fs.src  triangle_vs.src
test/shaders/spirv_vulkan/: anim.frag  anim.vert  blur.comp  life.comp
test/vk_host/: icosphere.h  mesh_data.h  obj_loader.h  vk_host_compute.cpp  vk_host_compute_blur.cpp  vk_host_fragment.cpp  vk_host_mesh.cpp  vk_host_texture.cpp  vk_pick_device.h
